force-app/main/default/objects/Survey__c/fields/Take_Over__c.field-meta.xml
<CustomField>
    <fullName>Take_Over__c</fullName>
    <label>Take Over</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>