force-app/main/default/objects/Survey__c/fields/Tanggal_Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Appraisal__c</fullName>
    <label>Tanggal Appraisal</label>
    <type>Date</type>
</CustomField>