force-app/main/default/objects/Survey__c/fields/Tanggal_Janji_Survey__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Janji_Survey__c</fullName>
    <formula>Opportunity__r.Jadwal_Janji_Survey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tanggal Janji Survey</label>
    <type>DateTime</type>
</CustomField>