force-app/main/default/objects/Survey__c/fields/TDP_At_Coy__c.field-meta.xml
<CustomField>
    <fullName>TDP_At_Coy__c</fullName>
    <label>TDP At Coy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>