force-app/main/default/objects/Survey__c/fields/TDP_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>TDP_By_Customer__c</fullName>
    <label>TDP By Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>