force-app/main/default/objects/Survey__c/fields/Tenor__c.field-meta.xml
<CustomField>
    <fullName>Tenor__c</fullName>
    <formula>Opportunity__r.Tenor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>