force-app/main/default/objects/Survey__c/fields/Tenor_Floating_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tenor_Floating_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tenor Floating Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>