force-app/main/default/objects/Survey__c/fields/Tipe_Penilaian__c.field-meta.xml
<CustomField>
    <fullName>Tipe_Penilaian__c</fullName>
    <defaultValue>&quot;Appraisal (KJPP)&quot;</defaultValue>
    <label>Tipe Penilaian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Approval</fullName>
            </value>
            <value>
                <fullName>Non Appraisal (NJOP)</fullName>
            </value>
            <value>
                <fullName>Appraisal (KJPP)</fullName>
                <default>true</default>
                <label>Appraisal (KJPP)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>