force-app/main/default/objects/Survey__c/fields/Total_Aset_Tidak_Lancar__c.field-meta.xml
<CustomField>
    <fullName>Total_Aset_Tidak_Lancar__c</fullName>
    <label>Total Aset Tidak Lancar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>