force-app/main/default/objects/Survey__c/fields/Total_Biaya_Asuransi__c.field-meta.xml
<CustomField>
    <fullName>Total_Biaya_Asuransi__c</fullName>
    <label>Total Biaya Asuransi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>