force-app/main/default/objects/Survey__c/fields/Total_Hutang_Jangka_Pendek__c.field-meta.xml
<CustomField>
    <fullName>Total_Hutang_Jangka_Pendek__c</fullName>
    <label>Total Hutang Jangka Pendek</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>