force-app/main/default/objects/Survey__c/fields/Total_Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Income__c</fullName>
    <label>Total Net Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>