force-app/main/default/objects/Survey__c/fields/Total_Obligasi__c.field-meta.xml
<CustomField>
    <fullName>Total_Obligasi__c</fullName>
    <label>Total Obligasi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>