force-app/main/default/objects/Survey__c/fields/Total_TDP__c.field-meta.xml
<CustomField>
    <fullName>Total_TDP__c</fullName>
    <label>Total TDP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>