force-app/main/default/objects/Survey__c/fields/Transaksi_Usaha_Gaji_Reflek_Rekening__c.field-meta.xml
<CustomField>
    <fullName>Transaksi_Usaha_Gaji_Reflek_Rekening__c</fullName>
    <label>Transaksi Usaha/ Gaji Reflek Rekening</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100% reflect rekening</fullName>
            </value>
            <value>
                <fullName>&gt;75% reflect rekening</fullName>
            </value>
            <value>
                <fullName>50% reflect rekening &amp; 50% cash basis</fullName>
            </value>
            <value>
                <fullName>&lt;50% reflect rekening</fullName>
            </value>
            <value>
                <fullName>Full cash basis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>