force-app/main/default/objects/Survey__c/fields/Upload_Hasil_KJPP__c.field-meta.xml
<CustomField>
    <fullName>Upload_Hasil_KJPP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Hasil KJPP</label>
    <type>Checkbox</type>
</CustomField>