force-app/main/default/objects/Survey__c/fields/Way_of_Financing__c.field-meta.xml
<CustomField>
    <fullName>Way_of_Financing__c</fullName>
    <label>Way of Financing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>