force-app/main/default/objects/Survey__c/fields/Working_Capital_Turn_Over__c.field-meta.xml
<CustomField>
    <fullName>Working_Capital_Turn_Over__c</fullName>
    <label>Working Capital Turn Over</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>