force-app/main/default/objects/Survey__c/validationRules/KJPP_Maksimum_LTV_Max_60persen_NilaiPasr.validationRule-meta.xml
<ValidationRule>
    <fullName>KJPP_Maksimum_LTV_Max_60persen_NilaiPasr</fullName>
    <active>false</active>
    <errorConditionFormula>KJPP_Maksimum_LTV__c &gt; (60/100 *   Nilai_Pasar__c  )</errorConditionFormula>
    <errorDisplayField>KJPP_Maksimum_LTV__c</errorDisplayField>
    <errorMessage>Maksimum LTV melebihi batas ketentuan, silakan pilih tipe approval Appraisal.</errorMessage>
</ValidationRule>