force-app/main/default/objects/Survey__c/validationRules/Locking_Form_Penilaian.validationRule-meta.xml
<ValidationRule>
    <fullName>Locking_Form_Penilaian</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  NOT(ISBLANK(PRIORVALUE(Luas_Tanah__c)))
) &amp;&amp; !IsVRByPassed__c</errorConditionFormula>
    <errorMessage>Form Penilaian Sudah di Submit, tidak bisa di ubah lagi.</errorMessage>
</ValidationRule>