force-app/main/default/objects/Survey__c/validationRules/NJOP_Maksimum_LTV_Max_500jt.validationRule-meta.xml
<ValidationRule>
    <fullName>NJOP_Maksimum_LTV_Max_500jt</fullName>
    <active>false</active>
    <errorConditionFormula>NJOP_Maksimum_LTV__c &gt; 500000000</errorConditionFormula>
    <errorDisplayField>NJOP_Maksimum_LTV__c</errorDisplayField>
    <errorMessage>Maksimum LTV melebihi batas ketentuan, silakan pilih tipe approval Appraisal.</errorMessage>
</ValidationRule>