force-app/main/default/objects/Survey__c/listViews/All_Survey.listView-meta.xml
<ListView>
    <fullName>All_Survey</fullName>
    <columns>NAME</columns>
    <columns>Application_ID__c</columns>
    <columns>Product_Type__c</columns>
    <columns>NTF_Pengajuan__c</columns>
    <columns>Tanggal_Janji_Survey__c</columns>
    <columns>Status_Penilaian__c</columns>
    <columns>Status_Ringkasan_Survey__c</columns>
    <columns>Status_Input_Survey__c</columns>
    <columns>Loan_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_From_LMS__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Survey</label>
</ListView>